--- a/styles.css
+++ b/styles.css
@@ -247,11 +247,7 @@ td:nth-child(1) {
     color: #333;
 }
 
-@media (max-width: 768px) {
-    table {
-        font-size: 14px; /* Kleinere tekst voor betere leesbaarheid */
-    }
-    th, td {
-        padding: 5px; /* Minder ruimte rond cellen */
-    }
+.table-container {
+    overflow-x: auto;
+    width: 100%;
 }
