--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,10 @@ td:nth-child(1) {
 }
 
 #progress-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
     font-size: 1em;
     font-weight: bold;
